# MyLHD

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  anadata.py  pyproject.toml
.github/workflows/: lint.yml
cts_utls/: CTSfosc_viewer.py
docs/: kaiseki_data_usage.md  labcom_retrieve.md  thomson_gp.md
examples/: kaiseki_data_sample.ipynb  labcom_retrieve_sample.ipynb  thomson_gp_sample.ipynb
mylhd/: __init__.py  anadata.py  anadata_storage.py  detect_latest_shotno.py  plot_utils.py
mylhd/cts_utls/: CTSfosc_viewer.py  __init__.py  fb_viewer.py  filter_list.py
mylhd/labcom_retrieve/: __init__.py  core.py  utils.py  wsl_utils.py
mylhd/thomson_gp/: __init__.py  _thomson_gp.py  core.py  kernels.py  low_rank.py  model.py  plotting.py  utils.py  visualize.py
mylhd/thomson_gp/legacy/: thomson_gp.py
src/mylhd/: __init__.py  anadata.py  detect_latest_shotno.py  plot_utils.py  utils.py
src/mylhd/cts_utls/: CTSfosc_viewer.py  __init__.py  fb_viewer.py  filter_list.py
src/mylhd/labcom_retrieve/: __init__.py  core.py  utils.py  wsl_utils.py
src/mylhd/thomson_gp/: __init__.py  core.py  kernels.py  model.py  utils.py  visualize.py
src/mylhd/thomson_gp/legacy/: thomson_gp.py
tests/: conftest.py  test_cts_utils.py  test_thomson_gp_utils.py  test_utils.py
